# organizador-diplomacy

./: .clinerules  .env.example  .gitignore  .prettierignore  .prettierrc  .windsurfrules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  bun.lockb  db.py  db_views.py  eslint.config.mjs  eslint.config.ts  formatter.py  jugadores_0001.csv  lefthook.yml  migrate.py  notion_sync.py  organizador.py  package.json  pyproject.toml  test_db.py  test_organizador.py  test_viewer.py  tsconfig.base.json  tsconfig.json  utils.py  viewer.py  vitest.config.ts
.github/: copilot-instructions.md  python.instructions.md  typescript.instructions.md
.trae/rules/: core.md  python.md  typescript.md
backend/: __init__.py  config.py  conftest.py  db.py  db_views.py  formatter.py  main.py  notion_sync.py  organizador.py  test_db.py  test_notion_sync.py  test_utils.py  test_viewer.py  test_viewer_chain.py  test_viewer_player.py  test_viewer_run.py  test_viewer_snapshot.py  test_viewer_sync.py  utils.py  viewer.py
backend/api/models/: chain.py  games.py  players.py  snapshots.py
backend/api/routers/: chain.py  games.py  players.py  snapshots.py  sync.py
backend/api/tests/: test_chain.py  test_games.py  test_players.py  test_snapshots.py  test_sync.py
backend/core/: config.py  logger.py
backend/crud/: __init__.py  chain.py  games.py  players.py  snapshots.py
backend/crud/tests/: test_crud.py  test_game_operations.py
backend/db/: connection.py  crud.py  db.py  db_game.py  db_views.py  models.py  players.py  test_db.py  views.py
backend/db/tests/: test_crud.py  test_diff.py  test_models.py  test_views.py
backend/organizador/: core.py  distribution.py  formatter.py  models.py  organizador.py  persistence.py  persistence_async.py  test_algorithm_advanced.py  test_algoritmo.py  test_core.py  test_country_assignment.py  test_distribution.py  test_formatter.py  test_organizador.py  test_persistence.py  test_shielding_algorithm.py  test_weights.py  weights.py
backend/sync/: cache_daemon.py  client.py  core.py  matching.py  notion_sync.py  test_cache_daemon.py  test_notion_sync.py
backend/viewer/: conftest.py  test_utils.py  test_viewer.py  test_viewer_chain.py  test_viewer_game.py  test_viewer_player.py  test_viewer_run.py  test_viewer_snapshot.py  test_viewer_sync.py  viewer.py
data/: diplomacy.db  jugadores_0002.csv  jugadores_0003.csv  jugadores_0004.csv
docs/ai-rules/: 01-architecture.md  02-backend.md  03-frontend.md  04-testing.md  05-workflow.md  README.md  core.md  python.md  typescript.md
frontend/: openapi-ts.config.ts  test-setup.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  App.test.ts  api.test.ts  api.ts  app.test.ts  app.ts  chain.ts  clickOutside.test.ts  clickOutside.ts  clipboard.ts  groupSnapshots.test.ts  groupSnapshots.ts  i18n.test.ts  i18n.ts  index.html  main.ts  navigation.svelte.ts  navigation.test.ts  panels.test.ts  panels.ts  resolution.test.ts  resolution.ts  selection.test.ts  selection.ts  snapshotUtils.test.ts  snapshotUtils.ts  stores.svelte.ts  stores.test.ts  syncResolution.ts  syncUtils.test.ts  syncUtils.ts  toast.test.ts  toast.ts  types.ts  utils.test.ts  utils.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: Badge.svelte  Badge.test.ts  Button.svelte  ButtonTestWrapper.test.svelte  ChainViewer.svelte  ChainViewer.test.ts  CsvImportModal.svelte  CsvImportModal.test.ts  DataTable.svelte  EditNode.svelte  GameDetail.svelte  GameDetail.test.ts  GameDraft.svelte  (+28 more)
frontend/static/: app.js  index.css  index.html  style.css
frontend/templates/: index.html
scripts/: export_openapi.py  generate-ai-instructions.ts
src/: app.ts  types.ts
static/: app.js  style.css
templates/: index.html
(+76 files in other folders)
