[project]
name = "organizador-diplomacy"
version = "0.1.0"
description = "Organizador de partidas para la liga de Diplomacy.Ñol"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "notion-client>=3.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
viewer      = "backend.viewer:main"
organizar   = "backend.organizador:organizar_partidas"
notion-sync = "backend.notion_sync:main"
