[project]
name = "organizador-diplomacy"
version = "0.1.0"
description = "Organizador de partidas para la liga de Diplomacy.Ñol"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "notion-client==3.0.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pyright==1.1.408",
    "ruff==0.15.7",
    "vulture==2.16",
]

[tool.vulture]
exclude = ["backend/test_*.py", "backend/**/test_*.py"]
ignore_decorators = ["@app.route"]
ignore_names = ["main", "args", "kwargs", "conn", "client", "app"]
min_confidence = 80
paths = ["backend"]

[tool.ruff]
# Rules for the fast linter
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "FBT", # flake8-boolean-trap
]
ignore = [
    "E501",   # Line too long (handled by formatter or ignored)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pyright]
include = ["backend"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
pythonVersion = "3.13"
pythonPlatform = "Darwin"

[project.scripts]
viewer      = "backend.viewer:main"
organizar   = "backend.organizador:organizar_partidas"
notion-sync = "backend.notion_sync:main"
